# canonical-indico-personal-agenda

./: MANIFEST.in  README.md  manage-i18n.sh  package-lock.json  package.json  setup.cfg  webpack-bundles.json
.github/workflows/: checkin.yml
indico_personal_agenda/: __init__.py  controllers.py  forms.py  plugin.py  views.py
indico_personal_agenda/client/: starbutton.js  starbutton.scss
indico_personal_agenda/migrations/: 20230831_0030_2fa6c5ce45b3_add_personal_agenda_models.py
indico_personal_agenda/models/: starred.py
indico_personal_agenda/templates/: agenda.html  manage.html  ngtimetable_menu.html  star_button.html
indico_personal_agenda/translations/: messages.pot
indico_personal_schedule/: __init__.py  controllers.py  plugin.py  views.py
indico_personal_schedule/client/: contribution_display.js  contribution_display.scss
indico_personal_schedule/migrations/: 20230831_0030_2fa6c5ce45b3_add_personal_schedule_models.py
indico_personal_schedule/models/: starred.py
indico_personal_schedule/templates/: contrib_star_button.html  starred_list.html
