[metadata]
name = indico-plugin-personal-agenda
version = 1.0.4
url = https://github.com/canonical/indico-plugin-personal-agenda
license = AGPLv3
author = Philipp Kewisch
author_email = philipp.kewisch@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11

[options.extras_require]
dev = tox==4.10.0

[options.entry_points]
indico.plugins =
    personal_agenda = indico_personal_agenda.plugin:PersonalAgendaPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tox:tox]
envlist = py3

[isort]
profile = black

[testenv]
allowlist_externals = npx
deps =
  black
  isort
  flake8
commands =
  black indico_personal_agenda
  isort indico_personal_agenda
  flake8 indico_personal_agenda
  npx stylelint indico_personal_agenda/client/*.scss
  npx eslint indico_personal_agenda/client/*.js
